<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen">

    <TextView
        android:id="@+id/username_text"
        android:layout_width="132dp"
        android:layout_height="49dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="124dp"
        android:text="@string/username"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/username_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:ems="10"
        android:hint="@string/enter_a_username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toEndOf="@+id/username_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="128dp"
        android:layout_height="56dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="60dp"
        android:text="@string/password"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/password_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_text" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="210dp"
        android:layout_height="56dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/enter_a_password"
        android:inputType="textPassword"
        android:textColorHint="#757575"
        app:layout_constraintStart_toEndOf="@+id/password_text"
        app:layout_constraintTop_toBottomOf="@+id/username_text" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="168dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />
</androidx.constraintlayout.widget.ConstraintLayout>