<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="#000000"
    tools:context=".MainActivity">

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:backgroundTint="#3F51B5"
            android:text="@string/back"
            app:iconTint="#B9255991"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/day_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                                <TextView
                                    android:layout_width="100dp"
                                    android:layout_height="101dp"
                                    android:layout_margin="1dp"
                                    android:layout_weight="5"
                                    android:background="#FFFFFF"
                                    android:gravity="center"
                                    android:text="@string/sunday"
                                    android:textAppearance="?android:attr/textAppearanceLarge"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="100dp"
                                    android:layout_height="101dp"
                                    android:layout_margin="1dp"
                                    android:layout_weight="5"
                                    android:background="#FFFFFF"
                                    android:gravity="center"
                                    android:text="@string/monday"
                                    android:textAppearance="?android:attr/textAppearanceLarge"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="100dp"
                                    android:layout_height="101dp"
                                    android:layout_margin="1dp"
                                    android:layout_weight="5"
                                    android:background="#FFFFFF"
                                    android:gravity="center"
                                    android:text="@string/tuesday"
                                    android:textAppearance="?android:attr/textAppearanceLarge"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="100dp"
                                    android:layout_height="101dp"
                                    android:layout_margin="1dp"
                                    android:layout_weight="5"
                                    android:background="#FFFFFF"
                                    android:gravity="center"
                                    android:text="@string/wednesday"
                                    android:textAppearance="?android:attr/textAppearanceLarge"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="100dp"
                                    android:layout_height="101dp"
                                    android:layout_margin="1dp"
                                    android:layout_weight="5"
                                    android:background="#FFFFFF"
                                    android:gravity="center"
                                    android:text="@string/thursday"
                                    android:textAppearance="?android:attr/textAppearanceLarge"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="100dp"
                                    android:layout_height="101dp"
                                    android:layout_margin="1dp"
                                    android:layout_weight="5"
                                    android:background="#FFFFFF"
                                    android:gravity="center"
                                    android:text="@string/friday"
                                    android:textAppearance="?android:attr/textAppearanceLarge"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="100dp"
                                    android:layout_height="101dp"
                                    android:layout_margin="1dp"
                                    android:layout_weight="5"
                                    android:background="#FFFFFF"
                                    android:gravity="center"
                                    android:text="@string/saturday"
                                    android:textAppearance="?android:attr/textAppearanceLarge"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="#FFFFFF"
                            android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/sunday_habits"
                                    android:layout_width="100dp"
                                    android:layout_height="match_parent"
                                    android:layout_margin="1dp"
                                    android:layout_weight="5"
                                    android:background="#FFFFFF"
                                    android:gravity="center"
                                    android:text="@string/free"
                                    android:textAppearance="?android:attr/textAppearanceLarge"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/monday_habits"
                                    android:layout_width="100dp"
                                    android:layout_height="match_parent"
                                    android:layout_margin="1dp"
                                    android:layout_weight="5"
                                    android:background="#FFFFFF"
                                    android:gravity="center"
                                    android:text="@string/free"
                                    android:textAppearance="?android:attr/textAppearanceLarge"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/tuesday_habits"
                                    android:layout_width="100dp"
                                    android:layout_height="match_parent"
                                    android:layout_margin="1dp"
                                    android:layout_weight="5"
                                    android:background="#FFFFFF"
                                    android:gravity="center"
                                    android:text="@string/free"
                                    android:textAppearance="?android:attr/textAppearanceLarge"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/wed_habits"
                                    android:layout_width="100dp"
                                    android:layout_height="match_parent"
                                    android:layout_margin="1dp"
                                    android:layout_weight="5"
                                    android:background="#FFFFFF"
                                    android:gravity="center"
                                    android:text="@string/free"
                                    android:textAppearance="?android:attr/textAppearanceLarge"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/thurs_habits"
                                    android:layout_width="100dp"
                                    android:layout_height="match_parent"
                                    android:layout_margin="1dp"
                                    android:layout_weight="5"
                                    android:background="#FFFFFF"
                                    android:gravity="center"
                                    android:text="@string/free"
                                    android:textAppearance="?android:attr/textAppearanceLarge"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/fri_habits"
                                    android:layout_width="100dp"
                                    android:layout_height="match_parent"
                                    android:layout_margin="1dp"
                                    android:layout_weight="5"
                                    android:background="#FFFFFF"
                                    android:gravity="center"
                                    android:text="@string/free"
                                    android:textAppearance="?android:attr/textAppearanceLarge"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/sat_habits"
                                    android:layout_width="100dp"
                                    android:layout_height="match_parent"
                                    android:layout_margin="1dp"
                                    android:layout_weight="5"
                                    android:background="#FFFFFF"
                                    android:gravity="center"
                                    android:text="@string/free"
                                    android:textAppearance="?android:attr/textAppearanceLarge"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />
                        </LinearLayout>
                </LinearLayout>
        </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>